--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
 
-    <img src="C:\Users\hp\OneDrive\Documents\GitHub/moon.png" id="icon">
+    <img src="C:/Users/hp/OneDrive/Desktop/cpp coding/moon.png" id="icon">
 
     <div class="cal-outer-body">
         <div class="cal-inner-body">
             <h1 class="text-center">Welcome to Calculate me!</h1>
             <div class="container flex flex-col items-center">
-                <audio src="C:\Users\hp\OneDrive\Documents\GitHub/click-sound.wav" id="click-sound"></audio>
+                <audio src="C:/Users/hp/OneDrive/Desktop/cpp coding/click-sound.wav" id="click-sound"></audio>
 
                 <div class="row">
                     <input type="text" class="input">
